Include notification panel in "all components" Base icon sizes on rems, not ems Change some stray "bolds" to use the $bold variable Correct spacing on checkbox error messages Create new functions helper file to hold SASS functions

--- a/src/components/table/_table.scss
+++ b/src/components/table/_table.scss
@@ -22,7 +22,7 @@ $table-row-hover-colour: $ds_colour__grey--lighter !default;
 
     th {
         background-color: $table-header-background-colour;
-        font-weight: bold;
+        font-weight: $bold;
         position: relative;
         text-align: left;
     }
@@ -189,7 +189,7 @@ $table-row-hover-colour: $ds_colour__grey--lighter !default;
                 content: attr(data-heading);
                 display: block;
                 position: absolute;
-                font-weight: bold;
+                font-weight: $bold;
                 left: 0;
                 margin-left: 16px;
                 margin-right: 16px;
